confluence/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: confluence-svc
spec:
  type: NodePort
  ports:
    - port: 8090
      targetPort: 8090
      protocol: TCP
      name: conf-web
  selector:
    app: confluence
