confluence/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: app
spec:
  rules:
    - host: confluence.lightning-engineering.com
      http:
        paths:
          - backend:
              serviceName: confluence
              servicePort: 8090
